Feat/web UI (#1)
Web UI